# cwi-accounting-agent

./: .gitignore  README.md  pyproject.toml
config/: cwi_accountant.toml.example
docs/case_study_assets/: cwi_accounting_agent_faang_resume_version.md  cwi_accounting_agent_portfolio_skills_page.md  cwi_accounting_agent_repository_evidence_appendix.md
site/: index.html
src/cwi_accountant/: __init__.py  __main__.py  app_context.py  cli.py  config.py  db.py  models.py  review_app.py  utils.py  workbook.py
src/cwi_accountant/parsing/: extractor.py
src/cwi_accountant/reporting/: reports.py
src/cwi_accountant/services/: __init__.py  category_mapper.py  duplicate_service.py  ingestion.py  recurring_service.py  review_queue.py  vendor_service.py  writeback.py
tests/: test_autopost_policy.py  test_config_resolution.py  test_db_and_queue.py  test_duplicate_service.py  test_extractor_confidence.py  test_ingestion_paths.py  test_models.py  test_recurring_service.py  test_reprocess_behavior.py  test_workbook_gateway.py
